sold unit requirements CRUD

--- a/src/app/software/component/setup-customer-detail/setup-customer-detail.component.html
+++ b/src/app/software/component/setup-customer-detail/setup-customer-detail.component.html
@@ -32,6 +32,7 @@
             <div class="software-container">
                 <div fxLayout="row" fxLayout.xs="column">
                     <div fxFlex="50" style="padding: 5px;">
+                        <mat-label>Picture</mat-label>
                         <div fxLayout="row" fxLayout.xs="column">
                             <div fxFlex="100">
                                 <img src="{{mstCustomerModel.Picture}}" style="width: 100%;" />
