--- a/src/app/software/component/activity-sold-unit-detail/activity-sold-unit-detail.component.html
+++ b/src/app/software/component/activity-sold-unit-detail/activity-sold-unit-detail.component.html
@@ -148,7 +148,7 @@
             </div>
             <div fxFlex="50">
                 <div fxLayout="row" fxLayout.xs="column">
-                    <div fxFlex="100" style="padding: 5px;">
+                    <div fxFlex="50" style="padding: 5px;">
                         <mat-form-field appearance="fill" style="width: 100%;">
                             <mat-label>Checklist</mat-label>
                             <mat-select [(value)]="trnSoldUnitModel.ChecklistId" [disabled]="trnSoldUnitModel.IsLocked">
@@ -158,6 +158,12 @@
                                 </mat-option>
                             </mat-select>
                         </mat-form-field>
+                    </div>
+                    <div fxFlex="50" style="padding: 5px;">
+                        <button mat-stroked-button color="" [disabled]="trnSoldUnitModel.IsLocked"
+                            style="margin-right: 5px;" (click)="buttonAddSoldUnitRequirement()">
+                            Add Checklist Requirements
+                        </button>
                     </div>
                 </div>
                 <div fxLayout="row" fxLayout.xs="column">
@@ -249,6 +255,98 @@
     <mat-tab-group mat-align-tabs="start">
         <mat-tab label="Checklist Requirements">
             <div class="software-container">
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-form-field appearance="fill" style="width: 100%;">
+                            <mat-label>Filter</mat-label>
+                            <input matInput (keyup)="soldUnitRequirementFilter($event)" placeholder="Filter"
+                                #soldUnitRequirementFilterData />
+                        </mat-form-field>
+                    </div>
+                </div>
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-table [dataSource]="soldUnitRequirementDataSource" #soldUnitRequirementSort="matSort"
+                            matSort style="overflow-x: scroll;">
+
+                            <ng-container matColumnDef="ButtonEdit">
+                                <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                                <mat-cell fxFlex="100px" *matCellDef="let row">
+                                    <button mat-flat-button color="primary" (click)="buttonEditSoldUnitRequirement(row)"
+                                        [disabled]="trnSoldUnitModel.IsLocked">
+                                        Edit
+                                    </button>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="ChecklistRequirementNo">
+                                <mat-header-cell fxFlex="120px" *matHeaderCellDef mat-sort-header> No
+                                </mat-header-cell>
+                                <mat-cell fxFlex="120px" *matCellDef="let row"> {{row.ChecklistRequirementNo}}
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="ChecklistRequirement">
+                                <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> Requirement
+                                </mat-header-cell>
+                                <mat-cell fxFlex="250px" *matCellDef="let row"> {{row.ChecklistRequirement}}
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="ChecklistCategory">
+                                <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Category
+                                </mat-header-cell>
+                                <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.ChecklistCategory}}
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="ChecklistType">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Type
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.ChecklistType}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="ChecklistWithAttachments">
+                                <mat-header-cell fxFlex="50px" *matHeaderCellDef mat-sort-header> A
+                                </mat-header-cell>
+                                <mat-cell fxFlex="50px" *matCellDef="let row" style="text-align: center !important;">
+                                    <mat-checkbox color="primary" [checked]="row.ChecklistWithAttachments"
+                                        [disableRipple]="true" (click)="$event.preventDefault()">
+                                    </mat-checkbox>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Status">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Status
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Status}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="StatusDate">
+                                <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header> Date
+                                </mat-header-cell>
+                                <mat-cell fxFlex="100px" *matCellDef="let row"> {{row.StatusDate}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Space">
+                                <mat-header-cell *matHeaderCellDef mat-sort-header> </mat-header-cell>
+                                <mat-cell *matCellDef="let row">
+                                </mat-cell>
+                            </ng-container>
+
+                            <mat-header-row *matHeaderRowDef="soldUnitRequirementDisplayedColumns"></mat-header-row>
+                            <mat-row *matRowDef="let row; columns: soldUnitRequirementDisplayedColumns;"></mat-row>
+
+                            <!-- <tr class="mat-row" *matNoDataRow>
+                                <td class="mat-cell" colspan="6">No data matching the filter
+                                    "{{soldUnitRequirementFilterData.value}}"</td>
+                            </tr> -->
+                        </mat-table>
+
+                        <mat-paginator #soldUnitRequirementPaginator [pageSizeOptions]="[10, 50, 100, 200]">
+                        </mat-paginator>
+                    </div>
+                </div>
 
             </div>
         </mat-tab>
