--- a/src/app/software/component/setup-project-detail/setup-project-detail.component.html
+++ b/src/app/software/component/setup-project-detail/setup-project-detail.component.html
@@ -29,55 +29,78 @@
     <mat-divider></mat-divider>
     <div class="software-container">
         <div fxLayout="row" fxLayout.xs="column">
-            <div fxFlex="25" style="padding: 5px;">
-                <mat-form-field appearance="fill" style="width: 100%;">
-                    <mat-label>Project Code</mat-label>
-                    <input matInput [(ngModel)]="mstProjectModel.ProjectCode" [ngModelOptions]="{standalone: true}"
-                        disabled>
-                </mat-form-field>
-            </div>
-            <div fxFlex="75" style="padding: 5px;">
+            <div fxFlex="50">
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="50" style="padding: 5px;">
+                        <mat-form-field appearance="fill" style="width: 100%;">
+                            <mat-label>Project Code</mat-label>
+                            <input matInput [(ngModel)]="mstProjectModel.ProjectCode"
+                                [ngModelOptions]="{standalone: true}" disabled>
+                        </mat-form-field>
+                    </div>
+                    <div fxFlex="50" style="padding: 5px;">
 
-            </div>
-        </div>
-        <div fxLayout="row" fxLayout.xs="column">
-            <div fxFlex="75" style="padding: 5px;">
-                <mat-form-field appearance="fill" style="width: 100%;">
-                    <mat-label>Project</mat-label>
-                    <input matInput [(ngModel)]="mstProjectModel.Project" [ngModelOptions]="{standalone: true}"
-                        [disabled]="mstProjectModel.IsLocked">
-                </mat-form-field>
-            </div>
-            <div fxFlex="25" style="padding: 5px;">
+                    </div>
+                </div>
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-form-field appearance="fill" style="width: 100%;">
+                            <mat-label>Project</mat-label>
+                            <input matInput [(ngModel)]="mstProjectModel.Project" [ngModelOptions]="{standalone: true}"
+                                [disabled]="mstProjectModel.IsLocked">
+                        </mat-form-field>
+                    </div>
+                </div>
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 3px;">
+                        <mat-form-field appearance="fill" style="width: 100%;">
+                            <mat-label>Address</mat-label>
+                            <textarea matInput [(ngModel)]="mstProjectModel.Address"
+                                [ngModelOptions]="{standalone: true}" style="min-height: 73px;"
+                                [disabled]="mstProjectModel.IsLocked"></textarea>
+                        </mat-form-field>
+                    </div>
+                </div>
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="50" style="padding: 3px;">
+                        <mat-form-field appearance="fill" style="width: 100%;">
+                            <mat-label>Status</mat-label>
+                            <mat-select [(value)]="mstProjectModel.Status" [disabled]="mstProjectModel.IsLocked">
+                                <mat-option *ngFor="let sysDropdownObject of sysDropdownModel"
+                                    [value]="sysDropdownObject.Value">
+                                    {{sysDropdownObject.Description}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                    <div fxFlex="50" style="padding: 5px;">
 
+                    </div>
+                </div>
             </div>
-        </div>
-        <div fxLayout="row" fxLayout.xs="column">
-            <div fxFlex="75" style="padding: 3px;">
-                <mat-form-field appearance="fill" style="width: 100%;">
-                    <mat-label>Address</mat-label>
-                    <textarea matInput [(ngModel)]="mstProjectModel.Address" [ngModelOptions]="{standalone: true}"
-                        style="min-height: 73px;" [disabled]="mstProjectModel.IsLocked"></textarea>
-                </mat-form-field>
-            </div>
-            <div fxFlex="25" style="padding: 5px;">
-
-            </div>
-        </div>
-        <div fxLayout="row" fxLayout.xs="column">
-            <div fxFlex="25" style="padding: 3px;">
-                <mat-form-field appearance="fill" style="width: 100%;">
-                    <mat-label>Status</mat-label>
-                    <mat-select [(value)]="mstProjectModel.Status" [disabled]="mstProjectModel.IsLocked">
-                        <mat-option *ngFor="let sysDropdownObject of sysDropdownModel"
-                            [value]="sysDropdownObject.Value">
-                            {{sysDropdownObject.Description}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
-            <div fxFlex="75" style="padding: 5px;">
-
+            <div fxFlex="50">
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-label>Logo</mat-label>
+                        <div fxLayout="row" fxLayout.xs="column">
+                            <div fxFlex="100">
+                                <img src="{{mstProjectModel.ProjectLogo}}" style="width: 100%;" />
+                            </div>
+                        </div>
+                        <input readonly #imageURL type="file"
+                            style="border: 1px solid #dadada; padding: 5px; margin-bottom: 10px; margin-right: 5px;"
+                            [disabled]="mstProjectModel.IsLocked ? mstProjectModel.IsLocked : isUploadDisabled" />
+                        <button mat-stroked-button color="" (click)="buttonUploadImage()"
+                            [disabled]="mstProjectModel.IsLocked ? mstProjectModel.IsLocked : isUploadDisabled"
+                            style="margin-right: 5px;">
+                            Upload
+                        </button>
+                        <button mat-stroked-button color="" (click)="buttonClearImage()"
+                            [disabled]="mstProjectModel.IsLocked ? mstProjectModel.IsLocked : isUploadDisabled">
+                            Clear
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
