--- a/src/app/software/component/activity-collection-detail/activity-collection-detail.component.html
+++ b/src/app/software/component/activity-collection-detail/activity-collection-detail.component.html
@@ -124,7 +124,94 @@
     <mat-tab-group mat-align-tabs="start">
         <mat-tab label="Payments">
             <div class="software-container">
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 3px; text-align: right;">
+                        <button mat-flat-button color="primary" [disabled]="trnCollectionModel.IsLocked"
+                            (click)="buttonAddCollectionPayment()">
+                            Add
+                        </button>
+                    </div>
+                </div>
 
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-form-field appearance="fill" style="width: 100%;">
+                            <mat-label>Filter</mat-label>
+                            <input matInput (keyup)="collectionPaymentFilter($event)" placeholder="Filter"
+                                #collectionPaymentFilterData />
+                        </mat-form-field>
+                    </div>
+                </div>
+
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-table [dataSource]="collectionPaymentDataSource" #collectionPaymentSort="matSort" matSort
+                            style="overflow-x: scroll;">
+
+                            <ng-container matColumnDef="ButtonEdit">
+                                <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                                <mat-cell fxFlex="100px" *matCellDef="let row">
+                                    <button mat-flat-button color="primary" (click)="buttonEditCollectionPayment(row)"
+                                        [disabled]="trnCollectionModel.IsLocked">
+                                        Edit
+                                    </button>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="ButtonDelete">
+                                <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                                <mat-cell fxFlex="100px" *matCellDef="let row">
+                                    <button mat-flat-button color="warn" (click)="buttonDeleteCollectionPayment(row)"
+                                        [disabled]="trnCollectionModel.IsLocked">
+                                        Delete
+                                    </button>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="SoldUnit">
+                                <mat-header-cell fxFlex="120px" *matHeaderCellDef mat-sort-header> Sold Unit No.
+                                </mat-header-cell>
+                                <mat-cell fxFlex="120px" *matCellDef="let row"> {{row.SoldUnit}}
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Project">
+                                <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> Project
+                                </mat-header-cell>
+                                <mat-cell fxFlex="250px" *matCellDef="let row"> {{row.Project}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="PayType">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Pay Type
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.PayType}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Amount">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Amount
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Amount}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Space">
+                                <mat-header-cell *matHeaderCellDef mat-sort-header> </mat-header-cell>
+                                <mat-cell *matCellDef="let row">
+                                </mat-cell>
+                            </ng-container>
+
+                            <mat-header-row *matHeaderRowDef="collectionPaymentDisplayedColumns"></mat-header-row>
+                            <mat-row *matRowDef="let row; columns: collectionPaymentDisplayedColumns;"></mat-row>
+
+                            <!-- <tr class="mat-row" *matNoDataRow>
+                                            <td class="mat-cell" colspan="6">No data matching the filter
+                                                "{{collectionPaymentFilterData.value}}"</td>
+                                        </tr> -->
+                        </mat-table>
+
+                        <mat-paginator #collectionPaymentPaginator [pageSizeOptions]="[10, 50, 100, 200]">
+                        </mat-paginator>
+                    </div>
+                </div>
             </div>
         </mat-tab>
     </mat-tab-group>
