Partial Prints and Sold Unit Cancel

--- a/src/app/software/component/activity-sold-unit-detail/activity-sold-unit-detail.component.html
+++ b/src/app/software/component/activity-sold-unit-detail/activity-sold-unit-detail.component.html
@@ -30,7 +30,7 @@
             (click)="buttonCancelSoldUnit()">
             Cancel
         </button>
-        <button mat-flat-button color="accent" [disabled]="isSoldUnitTransferButtonDisabled" style="margin-right: 5px;"
+        <button mat-flat-button color="warn" [disabled]="isSoldUnitTransferButtonDisabled" style="margin-right: 5px;"
             (click)="buttonTransferSoldUnit()">
             Transfer
         </button>
