--- a/src/app/software/component/dashboard/dashboard.component.html
+++ b/src/app/software/component/dashboard/dashboard.component.html
@@ -84,12 +84,12 @@
     </div>
     <div fxLayout="row" fxLayout.xs="column">
         <div fxFlex="25" style="padding: 5px;">
-            <button mat-flat-button routerLink="/software/activity-purchase-order-list" color=""
+            <button mat-flat-button routerLink="/software/reports" color=""
                 style="width: 100%; font-size: 17px; padding: 10px 0px 10px 10px;"><img
                     src="../../../../assets/images//software-icons/report.png" height="70"
                     style="margin-bottom: 7px;" />
                 <br />
-                Report
+                Reports
             </button>
         </div>
         <div fxFlex="25" style="padding: 5px;">
