Report Summary Services

--- a/src/app/software/component/reports/reports.component.html
+++ b/src/app/software/component/reports/reports.component.html
@@ -49,7 +49,7 @@
     <mat-divider></mat-divider>
     <mat-tab-group mat-align-tabs="start">
         <mat-tab label="Sold Units">
-            <div class="software-container">
+            <!-- <div class="software-container">
                 <div fxLayout="row" fxLayout.xs="column">
                     <div fxFlex="100" style="padding: 5px;">
                         <mat-form-field appearance="fill" style="width: 100%;">
@@ -58,7 +58,7 @@
                         </mat-form-field>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </mat-tab>
         <mat-tab label="Checklist Requirements">
 
