--- a/src/app/software/component/reports/reports.component.html
+++ b/src/app/software/component/reports/reports.component.html
@@ -93,6 +93,36 @@
                                 <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Customer}} </mat-cell>
                             </ng-container>
 
+                            <ng-container matColumnDef="Broker">
+                                <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Broker
+                                </mat-header-cell>
+                                <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Broker}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Price">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Price
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Price}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="PriceDiscount">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Discount
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.PriceDiscount}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="PricePayment">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Payment
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.PricePayment}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="PriceBalance">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Balance
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.PriceBalance}} </mat-cell>
+                            </ng-container>
+
                             <ng-container matColumnDef="Status">
                                 <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Status
                                 </mat-header-cell>
@@ -147,10 +177,31 @@
                         <mat-table [dataSource]="soldUnitRequirementDataSource" #soldUnitRequirementSort="matSort"
                             matSort style="overflow-x: scroll;">
 
-                            <ng-container matColumnDef="ChecklistRequirementNo">
-                                <mat-header-cell fxFlex="120px" *matHeaderCellDef mat-sort-header> No
+                            <ng-container matColumnDef="SoldUnitDate">
+                                <mat-header-cell fxFlex="120px" *matHeaderCellDef mat-sort-header> Date
                                 </mat-header-cell>
-                                <mat-cell fxFlex="120px" *matCellDef="let row"> {{row.ChecklistRequirementNo}}
+                                <mat-cell fxFlex="120px" *matCellDef="let row"> {{row.SoldUnitDate}}
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Project">
+                                <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> Project
+                                </mat-header-cell>
+                                <mat-cell fxFlex="250px" *matCellDef="let row"> {{row.Project}}
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Unit">
+                                <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Unit
+                                </mat-header-cell>
+                                <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Unit}}
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="ChecklistRequirementNo">
+                                <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header> No.
+                                </mat-header-cell>
+                                <mat-cell fxFlex="100px" *matCellDef="let row"> {{row.ChecklistRequirementNo}}
                                 </mat-cell>
                             </ng-container>
 
@@ -161,39 +212,10 @@
                                 </mat-cell>
                             </ng-container>
 
-                            <ng-container matColumnDef="ChecklistCategory">
-                                <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Category
-                                </mat-header-cell>
-                                <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.ChecklistCategory}}
-                                </mat-cell>
-                            </ng-container>
-
-                            <ng-container matColumnDef="ChecklistType">
-                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Type
-                                </mat-header-cell>
-                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.ChecklistType}} </mat-cell>
-                            </ng-container>
-
-                            <ng-container matColumnDef="ChecklistWithAttachments">
-                                <mat-header-cell fxFlex="50px" *matHeaderCellDef mat-sort-header> A
-                                </mat-header-cell>
-                                <mat-cell fxFlex="50px" *matCellDef="let row" style="text-align: center !important;">
-                                    <mat-checkbox color="primary" [checked]="row.ChecklistWithAttachments"
-                                        [disableRipple]="true" (click)="$event.preventDefault()">
-                                    </mat-checkbox>
-                                </mat-cell>
-                            </ng-container>
-
                             <ng-container matColumnDef="Status">
                                 <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Status
                                 </mat-header-cell>
                                 <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Status}} </mat-cell>
-                            </ng-container>
-
-                            <ng-container matColumnDef="StatusDate">
-                                <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header> Date
-                                </mat-header-cell>
-                                <mat-cell fxFlex="100px" *matCellDef="let row"> {{row.StatusDate}} </mat-cell>
                             </ng-container>
 
                             <ng-container matColumnDef="Space">
@@ -249,7 +271,7 @@
                             </ng-container>
 
                             <ng-container matColumnDef="Remarks">
-                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Remarks
+                                <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Remarks
                                 </mat-header-cell>
                                 <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Remarks}} </mat-cell>
                             </ng-container>
@@ -258,6 +280,27 @@
                                 <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> User
                                 </mat-header-cell>
                                 <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.User}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Project">
+                                <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> Project
+                                </mat-header-cell>
+                                <mat-cell fxFlex="250px" *matCellDef="let row"> {{row.Project}}
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="UnitCode">
+                                <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Unit
+                                </mat-header-cell>
+                                <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.UnitCode}}
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Customer">
+                                <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> Customer
+                                </mat-header-cell>
+                                <mat-cell fxFlex="250px" *matCellDef="let row"> {{row.Customer}}
+                                </mat-cell>
                             </ng-container>
 
                             <ng-container matColumnDef="Space">
@@ -328,18 +371,22 @@
                                 <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.SoldUnit}} </mat-cell>
                             </ng-container>
 
+                            <ng-container matColumnDef="Remarks">
+                                <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Remarks
+                                </mat-header-cell>
+                                <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Remarks}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Amount">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Amount
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Amount}} </mat-cell>
+                            </ng-container>
+
                             <ng-container matColumnDef="Status">
                                 <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Status
                                 </mat-header-cell>
                                 <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Status}} </mat-cell>
-                            </ng-container>
-
-                            <ng-container matColumnDef="IsLocked">
-                                <mat-header-cell fxFlex="50px" *matHeaderCellDef mat-sort-header> L </mat-header-cell>
-                                <mat-cell fxFlex="50px" *matCellDef="let row" style="text-align: center !important;">
-                                    <mat-checkbox color="primary" [checked]="row.IsLocked" [disableRipple]="true"
-                                        (click)="$event.preventDefault()"></mat-checkbox>
-                                </mat-cell>
                             </ng-container>
 
                             <ng-container matColumnDef="Space">
@@ -405,9 +452,16 @@
                             </ng-container>
 
                             <ng-container matColumnDef="Customer">
-                                <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> Customer
+                                <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> Full name
                                 </mat-header-cell>
-                                <mat-cell fxFlex="250px" *matCellDef="let row"> {{row.FullName}} </mat-cell>
+                                <mat-cell fxFlex="250px" *matCellDef="let row">{{row.LastName}} {{row.FirstName}}
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Gender">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Gender
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Gender}} </mat-cell>
                             </ng-container>
 
                             <ng-container matColumnDef="Address">
@@ -416,18 +470,16 @@
                                 <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Address}} </mat-cell>
                             </ng-container>
 
-                            <ng-container matColumnDef="Status">
-                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Status
+                            <ng-container matColumnDef="EmailAddress">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Email Address
                                 </mat-header-cell>
-                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Status}} </mat-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.EmailAddress}} </mat-cell>
                             </ng-container>
 
-                            <ng-container matColumnDef="IsLocked">
-                                <mat-header-cell fxFlex="50px" *matHeaderCellDef mat-sort-header> L </mat-header-cell>
-                                <mat-cell fxFlex="50px" *matCellDef="let row" style="text-align: center !important;">
-                                    <mat-checkbox color="primary" [checked]="row.IsLocked" [disableRipple]="true"
-                                        (click)="$event.preventDefault()"></mat-checkbox>
-                                </mat-cell>
+                            <ng-container matColumnDef="TelephoneNumber">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Tel. Number
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.TelephoneNumber}} </mat-cell>
                             </ng-container>
 
                             <ng-container matColumnDef="Space">
@@ -474,9 +526,16 @@
                             </ng-container>
 
                             <ng-container matColumnDef="Broker">
-                                <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> Broker
+                                <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> Full name
                                 </mat-header-cell>
-                                <mat-cell fxFlex="250px" *matCellDef="let row"> {{row.FullName}} </mat-cell>
+                                <mat-cell fxFlex="250px" *matCellDef="let row">{{row.LastName}} {{row.FirstName}}
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Gender">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Gender
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Gender}} </mat-cell>
                             </ng-container>
 
                             <ng-container matColumnDef="Address">
@@ -485,18 +544,16 @@
                                 <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Address}} </mat-cell>
                             </ng-container>
 
-                            <ng-container matColumnDef="Status">
-                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Status
+                            <ng-container matColumnDef="EmailAddress">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Email Address
                                 </mat-header-cell>
-                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Status}} </mat-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.EmailAddress}} </mat-cell>
                             </ng-container>
 
-                            <ng-container matColumnDef="IsLocked">
-                                <mat-header-cell fxFlex="50px" *matHeaderCellDef mat-sort-header> L </mat-header-cell>
-                                <mat-cell fxFlex="50px" *matCellDef="let row" style="text-align: center !important;">
-                                    <mat-checkbox color="primary" [checked]="row.IsLocked" [disableRipple]="true"
-                                        (click)="$event.preventDefault()"></mat-checkbox>
-                                </mat-cell>
+                            <ng-container matColumnDef="TelephoneNumber">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Tel. Number
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.TelephoneNumber}} </mat-cell>
                             </ng-container>
 
                             <ng-container matColumnDef="Space">
